<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/long_text"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/longueur" />
        <SeekBar
            android:id="@+id/long_seekbar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:max="25" />
    </LinearLayout>
    
    <TextView 
        android:id="@+id/param_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/red"
        android:text="@string/exp" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    <CheckBox
	        android:id="@+id/base_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <ImageView
	        android:contentDescription="@string/app_name"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_marginRight="4dp"
	        android:layout_weight="1"
	        android:src="@drawable/menhir" />
	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:text="@string/base_niveau" />
	</LinearLayout>
	
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="italic"
        android:text="@string/param_descript" />

</LinearLayout>
