<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@drawable/affiche" >

    <TextView
        android:id="@+id/titreInfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/info"
        android:textColor="@color/theme_vert"
        android:textSize="32sp"
        android:shadowColor="@color/choco"
        android:shadowDy="4"
        android:shadowRadius="3" />
	
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titreInfos"
        android:layout_above="@+id/quitInfos" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/infos1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dp"
		        android:gravity="center"
		        android:text="@string/info_text"
		        android:textColor="@color/theme_gris"
		        android:textSize="18sp" />
            
            <TextView
                android:id="@+id/infos2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/info_text2"
		        android:textColor="@color/theme_gris"
		        android:textSize="15sp" />
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_tb"
                android:contentDescription="@string/tiret" />
            
        </LinearLayout>
        
    </ScrollView>
     
    <Button
        android:id="@+id/quitInfos"
        style="@style/pencil_button"
        android:layout_width="180dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="quitInfos"
        android:text="@string/accept" />

</RelativeLayout>